[metadata]
name = PyMonoLib
version = 0.2c
author = MakisuKurisu
author_email = 667strets@gmail.com
description = Python wrapper for Monobank API
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/makisukurisu/py-mono-api
project_urls =
    Bug Tracker = https://github.com/makisukurisu/py-mono-api/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir = 
    = pymono
packages = find:
python_requires = >=3.8

[options.packages.find]
where = pymono